Add Comments, rake database, make controller

--- a/test/fixtures/decks.yml
+++ b/test/fixtures/decks.yml
@@ -2,13 +2,14 @@
 #
 # Table name: decks
 #
-#  id         :integer          not null, primary key
-#  owner_id   :integer          not null
-#  title      :string           not null
-#  course_id  :integer
-#  public     :boolean          default(TRUE), not null
-#  created_at :datetime         not null
-#  updated_at :datetime         not null
+#  id          :integer          not null, primary key
+#  owner_id    :integer          not null
+#  title       :string           not null
+#  course_id   :integer
+#  public      :boolean          default(TRUE), not null
+#  created_at  :datetime         not null
+#  updated_at  :datetime         not null
+#  description :text
 #
 
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
